--- a/ansible/collection_playbooks/block/delete_lun.yml
+++ b/ansible/collection_playbooks/block/delete_lun.yml
@@ -25,7 +25,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        lun_info:
+        spec:
           luns: '{{ item }}'
 
       with_items: '{{ luns }}'
