--- a/ansible/collection_playbooks/block/create_lun.yml
+++ b/ansible/collection_playbooks/block/create_lun.yml
@@ -24,7 +24,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        lun_info:
+        spec:
           pool_id: '{{ pool_id }}'
           size: '{{ size }}'
           lun: '{{ lun | default(omit) }}'
