--- a/ansible/collection_playbooks/block/create_lun_parity.yml
+++ b/ansible/collection_playbooks/block/create_lun_parity.yml
@@ -24,7 +24,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        lun_info:
+        spec:
           parity_group: '{{ parity_group | default(None) }}'
           size: '{{ size }}'
           name: '{{ name  | default(None) }}'
