--- a/ansible/collection_playbooks/block/expand_lun.yml
+++ b/ansible/collection_playbooks/block/expand_lun.yml
@@ -24,7 +24,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        lun_info:
+        spec:
           luns: '{{ luns }}'
           size: '{{size_gb}}'
           capacity_saving: '{{ capacity_saving | default(None) }}'
