--- a/ansible/collection_playbooks/block/get_lun_hex.yml
+++ b/ansible/collection_playbooks/block/get_lun_hex.yml
@@ -7,9 +7,9 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: "446039"
-    - ucp_serial: "UCP-CI-52918"
-    - lun: 00:07:CF 
+    - storage_serial: "715035"
+    - ucp_serial: "20-253"
+    - lun: 00:99:CF 
   tasks:
     - hv_lun_facts:
 
@@ -22,7 +22,7 @@
           username: "{{ucpadvisor_username}}"
           password: "{{ucpadvisor_password}}"
 
-        lun_info:
+        spec:
           lun: '{{ lun | default(omit) }}'
           name: '{{ name | default(omit) }}'
           max_count: '{{ max_count | default(omit) }}'
