--- a/ansible/collection_playbooks/block/create_multi_luns_with_count.yml
+++ b/ansible/collection_playbooks/block/create_multi_luns_with_count.yml
@@ -7,10 +7,10 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - ucp_serial: UCP-CI-52918
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
     - pool_id: 6
     - size: 0.08GB
-    - storage_serial: 446039
     - count: 2
   tasks:
     - hv_lun:
@@ -18,7 +18,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
 
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
