--- a/ansible/collection_playbooks/block/get_all_parity_groups.yml
+++ b/ansible/collection_playbooks/block/get_all_parity_groups.yml
@@ -7,13 +7,13 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - ucp_serial: UCP-CI-11111
-    - storage_serial: 611032
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
   tasks:
     - hv_paritygroup_facts:
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
           username: "{{ucpadvisor_username}}"
