--- a/ansible/collection_playbooks/block/get_hg.yml
+++ b/ansible/collection_playbooks/block/get_hg.yml
@@ -7,9 +7,9 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - ucp_serial: UCP-CI-11111
-    - storage_serial: 611032
-    - ihost_group_name: test-ansible-hg-1
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
+    - host_group_name: test-ansible-hg-1
     - ports:
       - CL1-A
       - CL2-B
@@ -18,7 +18,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
