--- a/ansible/collection_playbooks/block/get_lun.yml
+++ b/ansible/collection_playbooks/block/get_lun.yml
@@ -8,15 +8,15 @@
     - include_vars: vars.ucpa.yml
   vars:
     - storage_serial: "715035"
-    - ucp_serial: "20-253"
+    - ucp_name: "20-253"
     - max_count: 10
-    - lun: 1999
+    - lun: 2477
   tasks:
     - hv_lun_facts:
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
