--- a/ansible/collection_playbooks/block/create_hg.yml
+++ b/ansible/collection_playbooks/block/create_hg.yml
@@ -7,11 +7,11 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: 611032
-    - ucp_serial: UCP-CI-11111
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
     - host_group_name: test-ansible-hg-1
     - ports:
-      - CL2-B
+      - CL2-A
     - host_mode: VMWARE_EXTENSION
     - host_mode_options:
       - 54
@@ -22,7 +22,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
