--- a/ansible/collection_playbooks/block/create_lun.yml
+++ b/ansible/collection_playbooks/block/create_lun.yml
@@ -7,9 +7,9 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: 611032
-    - ucp_serial: UCP-CI-11111
-    - pool_id: 27
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
+    - pool_id: 5
     - size: 1.07GB
   tasks:
     - hv_lun:
@@ -17,7 +17,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
