--- a/ansible/collection_playbooks/block/create_multi_luns.yml
+++ b/ansible/collection_playbooks/block/create_multi_luns.yml
@@ -7,10 +7,10 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - ucp_serial: UCP-CI-52918
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
     - pool_id: 6
     - size: 0.09GB
-    - storage_serial: 446039
     - luns:
       - 8019
       - 8018
@@ -20,7 +20,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
 
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
