--- a/ansible/collection_playbooks/block/find_lun_by_naa.yml
+++ b/ansible/collection_playbooks/block/find_lun_by_naa.yml
@@ -7,15 +7,15 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - storage_serial: "446039"
-    - ucp_serial: "UCP-CI-52918"
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
     - lun: "naa.60060e8012b3d7005040b3d7000007cf"
   tasks:
     - hv_lun_facts:
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
