--- a/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
+++ b/ansible/collection_playbooks/block/get_all_hg_query_luns.yml
@@ -7,8 +7,8 @@
   pre_tasks:
     - include_vars: vars.ucpa.yml
   vars:
-    - ucp_serial: UCP-CI-11111
-    - storage_serial: 611032
+    - storage_serial: "715035"
+    - ucp_name: "20-253"
     - query:
       - luns
       - wwns
@@ -17,7 +17,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
