--- a/ansible/collection_playbooks/block/get_all_luns.yml
+++ b/ansible/collection_playbooks/block/get_all_luns.yml
@@ -8,7 +8,7 @@
     - include_vars: vars.ucpa.yml
   vars:
     - storage_serial: "715035"
-    - ucp_serial: "20-253"
+    - ucp_name: "20-253"
     - lun: 100
     - max_count: 10
   tasks:
@@ -16,7 +16,7 @@
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
