--- a/ansible/collection_playbooks/block/get_lun_hex.yml
+++ b/ansible/collection_playbooks/block/get_lun_hex.yml
@@ -8,14 +8,14 @@
     - include_vars: vars.ucpa.yml
   vars:
     - storage_serial: "715035"
-    - ucp_serial: "20-253"
+    - ucp_name: "20-253"
     - lun: 00:99:CF 
   tasks:
     - hv_lun_facts:
 
         storage_system_info:
           serial: '{{ storage_serial }}'
-          ucp_serial: '{{ ucp_serial }}'
+          ucp_name: '{{ ucp_name }}'
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
