--- a/ansible/collection_playbooks/block/present_lun.yml
+++ b/ansible/collection_playbooks/block/present_lun.yml
@@ -28,7 +28,7 @@
           password: "{{ucpadvisor_password}}"
 
         spec:
-          state: '{{ state | default(None) }}'
+          state: 'present_lun'
           name: '{{ host_group_name }}'
           ports: '{{ ports | default(None) }}'
           luns: '{{ luns | default(None) }}'
