--- a/ansible/collection_playbooks/block/add_wwn_hg.yml
+++ b/ansible/collection_playbooks/block/add_wwn_hg.yml
@@ -31,7 +31,7 @@
           state: add_wwn
           name: '{{ host_group_name }}'
           ports: '{{ ports }}'
-          wwns: '{{ wwns | default(None) }}'
+          wwns: '{{ wwns }}'
       register: result
     - debug: var=result
 
