--- a/ansible/collection_playbooks/block/unpresent_lun.yml
+++ b/ansible/collection_playbooks/block/unpresent_lun.yml
@@ -30,7 +30,7 @@
         spec:
           state: 'unpresent_lun'
           name: '{{ host_group_name }}'
-          ports: '{{ ports | default(None) }}'
+          ports: '{{ ports }}'
           luns: '{{ luns }}'
       register: result
     - debug: var=result
