--- a/deployment/k8sdeployments/elasticsearch/es-statefulset.yml
+++ b/deployment/k8sdeployments/elasticsearch/es-statefulset.yml
@@ -23,7 +23,7 @@ spec:
         - -c
         - chown -R 1000:1000 /usr/share/elasticsearch/data
         securityContext:
-          privileged: true
+          privileged: false
         volumeMounts:
         - name: data
           mountPath: /usr/share/elasticsearch/data
@@ -34,7 +34,7 @@ spec:
         - -w
         - vm.max_map_count=262144
         securityContext:
-          privileged: true
+          privileged: false
       - name: increase-the-ulimit
         image: busybox
         command:
@@ -42,7 +42,7 @@ spec:
         - -c
         - ulimit -n 65536
         securityContext:
-          privileged: true
+          privileged: false
       containers:
       - name: elasticsearch
         image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.6.2
