--- a/playbooks/vsp/add_ucp.yml
+++ b/playbooks/vsp/add_ucp.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml
+    - include_vars: ../var/vars.ucpa.yml
   vars:
     - serial_number: "202532"
     - gateway_address: 172.25.20.253
