--- a/playbooks/vsp/add_wwn_hg.yml
+++ b/playbooks/vsp/add_wwn_hg.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml
+    - include_vars: ../var/vars.ucpa.yml
   vars:
     - storage_serial: "40014"
     - ucp_name: "94-245"
