--- a/playbooks/vsp/get_all_dynamic_pool.yml
+++ b/playbooks/vsp/get_all_dynamic_pool.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: vars.ucpa.yml
+    - include_vars: ../var/vars.ucpa.yml
   vars:
     - storage_serial: "715035"
     - ucp_name: "20-253"
