--- a/playbooks/vsp/get_support_logs.yml
+++ b/playbooks/vsp/get_support_logs.yml
@@ -11,8 +11,8 @@
           
         ucp_advisor_info:
           address: "{{ucpadvisor_address}}"
-          username: "{{ucpadvisor_username}}"
-          password: "{{ucpadvisor_password}}"
+          username: "{{ucpadvisor_ansible_vault_user}}"
+          password: "{{ucpadvisor_ansible_vault_secret}}"
 
       register: result
     - debug: var=result
