--- a/playbooks/vsp/add_ucp.yml
+++ b/playbooks/vsp/add_ucp.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: ../var/vars.ucpa.yml
+    - include_vars: ../ansible.vault.var/ansible.vault.vars.ucpa.yml
   vars:
     - serial_number: "202532"
     - gateway_address: 172.25.20.253
@@ -18,8 +18,8 @@
     - hv_ucp:
         state: present
         ucpadvisor_address: "{{ucpadvisor_address}}"
-        ucpadvisor_username: "{{ucpadvisor_username}}"
-        ucpadvisor_key: "{{ucpadvisor_password}}"
+        ucpadvisor_ansible_vault_user: "{{ucpadvisor_ansible_vault_user}}"
+        ucpadvisor_key: "{{ucpadvisor_ansible_vault_secret}}"
         serial_number: '{{ serial_number }}'
         gateway_address: '{{ gateway_address}}'
         model: '{{ model }}'
