fix vault var folder path

--- a/playbooks/vsp/add_storage_system.yml
+++ b/playbooks/vsp/add_storage_system.yml
@@ -5,8 +5,8 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: ../ansible.vault.var/ansible.vault.vars.ucpa.yml
-    - include_vars: ../ansible.vault.var/ansible.vault.vars.storage.yml
+    - include_vars: ../ansible_vault_var/ansible.vault.vars.ucpa.yml
+    - include_vars: ../ansible_vault_var/ansible.vault.vars.storage.yml
   vars:
     - ucp_name: ucp-202532
   tasks:
