--- a/playbooks/vsp/delete_storage_system.yml
+++ b/playbooks/vsp/delete_storage_system.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: ../ansible.vault.var/ansible.vault.vars.ucpa.yml
+    - include_vars: ../ansible_vault_var/ansible.vault.vars.ucpa.yml
   vars:
     - storage_serial: "715035"
     - ucp_name: "ucp-202532"
