rename ucpa vault var file name

--- a/playbooks/vsp/delete_lun.yml
+++ b/playbooks/vsp/delete_lun.yml
@@ -5,7 +5,7 @@
     - hitachi.storage
   gather_facts: false
   pre_tasks:
-    - include_vars: ../ansible_vault_vars/ansible.vault.vars.ucpa.yml
+    - include_vars: ../ansible_vault_vars/ansible_vault_ucpa_var.yml
   vars:
     - luns:
       - 386
