rename storge var files

--- a/playbooks/vsp/add_storage_system.yml
+++ b/playbooks/vsp/add_storage_system.yml
@@ -6,7 +6,7 @@
   gather_facts: false
   pre_tasks:
     - include_vars: ../ansible_vault_vars/ansible_vault_ucpa_var.yml
-    - include_vars: ../ansible_vault_vars/ansible.vault.vars.storage.yml
+    - include_vars: ../ansible_vault_vars/ansible_vault_storage_var.yml
   vars:
     - ucp_name: ucp-202532
   tasks:
