--- a/playbooks/ansible_vault_vars/ansible_vault_ucpa_var.yml
+++ b/playbooks/ansible_vault_vars/ansible_vault_ucpa_var.yml
@@ -1,6 +1,6 @@
 #User will use Ansible Vault to encrypt this file.
 #Ansible will decrypt this file when it executes the playbook.
 
-ucpadvisor_address: 172.25.20.105
+ucpadvisor_address: 10.2.1.1
 ucpadvisor_ansible_vault_user: ucpadmin
-ucpadvisor_ansible_vault_secret: scret
+ucpadvisor_ansible_vault_secret: secret
