--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,44 +7,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install ansible and ansible-lint
-      run: |
-        pip install ansible ansible-lint
-
-    - name: Lint Ansible Collection
-      run: |
-        ansible-lint .
-
   build:
     runs-on: ubuntu-latest
-    needs: lint
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install ansible
-      run: |
-        pip install ansible
+    - name: Build Docker image
+      run: docker build -t ansible-image .
 
     - name: Build Ansible Collection
-      run: |
-        ansible-galaxy collection build
+      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ansible-image ansible-galaxy collection build
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v2
@@ -69,5 +42,4 @@ jobs:
     - name: Publish to Ansible Galaxy
       env:
         ANSIBLE_COLLECTIONS_TOKEN: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
-      run: |
-        ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_COLLECTIONS_TOKEN
+      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ansible-image ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_COLLECTIONS_TOKEN
