Updated the galaxy file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       run: docker push ghcr.io/${{ github.repository_owner }}/ansible-image:latest
 
     - name: Build Ansible Collection
-      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection build
+      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection build --force
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v2
@@ -54,4 +54,4 @@ jobs:
     - name: Publish to Ansible Galaxy
       env:
         ANSIBLE_COLLECTIONS_TOKEN: ${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}
-      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_COLLECTIONS_TOKEN
+      run: docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace ghcr.io/${{ github.repository_owner }}/ansible-image:latest ansible-galaxy collection publish *.tar.gz --api-key $ANSIBLE_COLLECTIONS_TOKEN --force
